implementacion all methods

--- a/Presentation/Api/appsettings.Production.json
+++ b/Presentation/Api/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:localhost,1433;Initial Catalog=TestZombis;Persist Security Info=False;User ID=sa;Password=TuPasswordSegura123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:xxxxx,1433;Initial Catalog=xxxxx;Persist Security Info=False;User ID=xxxx;Password=xxxxx;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   }
 }
