--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -136,6 +136,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\Shared\Shared\Shared.csproj" />
   </ItemGroup>
 
