--- a/Presentation/Api/appsettings.Development.json
+++ b/Presentation/Api/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:server-node-dv-v1.database.windows.net,1433;Initial Catalog=Diagnosis-dev-v1;Persist Security Info=False;User ID=adminV1;Password=abc123$$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:server-node-dv-v1.database.windows.net,1433;Initial Catalog=Diagnosis-dev-v1;Persist Security Info=False;User ID=adminV1;Password=\"abc123$$\";MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;Max Pool Size=200;"
   }
 }
