--- a/Presentation/Api/appsettings.json
+++ b/Presentation/Api/appsettings.json
@@ -9,7 +9,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:server-node-dv-v1.database.windows.net,1433;Initial Catalog=Diagnosis-dev-v1;Persist Security Info=False;User ID=adminV1;Password=abc123$$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:server-node-dv-v1.database.windows.net,1433;Initial Catalog=Diagnosis-dev-v1;Persist Security Info=False;User ID=adminV1;Password=abc123$$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;Max Pool Size=200;"
   },
   "IpRateLimiting": {
     "EnableEndpointRateLimiting": true,
@@ -21,7 +21,7 @@
       {
         "Endpoint": "*",
         "Period": "1m",
-        "Limit": 100
+        "Limit": 1000
       }
     ]
   }
